add call api for received email from server

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
 
         <main>
-
+            <button @click="getApiEmailList(emailList)">CREA LISTA E-MAIL</button>
         </main>
 
         <footer>
