--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         </header>
 
         <main>
-            <button @click="getApiEmailList(emailList)">CREA LISTA E-MAIL</button>
+            <div class="btn_container">
+                <button @click="getApiEmailList">CREA LISTA E-MAIL</button>
+            </div>
+
+            <ul class="list_container">
+                <li v-for="el in emailList">
+                    <h3>{{ el }}</h3>
+                </li>
+            </ul>
         </main>
 
         <footer>
